Update Privacy Policy effective date and sections
Added note about RevenueCat

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <body>
   <div class="container">
     <h1>Privacy Policy</h1>
-    <p>Effective Date: 12/06/2025</p>
+    <p>Effective Date: 12/31/2025</p>
 
     <h2>Hi there!</h2>
     <p>Your privacy matters to us. Here’s how <strong>BPTracker</strong> handles your information:</p>
@@ -60,19 +60,26 @@
     <h2>2. Permissions</h2>
     <p>We don’t ask for more than we need. The app may ask to access local storage so your measurements can be saved and loaded. That’s it.</p>
 
-    <h2>3. No Third-Party Sharing</h2>
-    <p>We don’t use ads, analytics, or third-party services. Your data stays private and secure on your device.</p>
+    <h2>3. Use of RevenueCat</h2>
+    <p>We use <a href="https://www.revenuecat.com/" target="_blank">RevenueCat</a> to manage in-app purchases and subscriptions. RevenueCat may collect:</p>
+    <ul>
+      <li>Purchase information, such as product IDs, subscription status, and timestamps</li>
+    </ul>
+    <p>This data is used solely to manage subscriptions and entitlements.</p>
 
-    <h2>4. Security</h2>
+    <h2>4. No Third-Party Sharing</h2>
+    <p>We don’t use ads or other third-party analytics. Your personal measurement data stays private on your device. Only RevenueCat receives purchase-related information as described above.</p>
+
+    <h2>5. Security</h2>
     <p>We do our best to keep your data safe, but please remember that your device’s security is also important.</p>
 
-    <h2>5. For Families</h2>
+    <h2>6. For Families</h2>
     <p>This app isn’t intended for children under 13, and we don’t knowingly collect their information.</p>
 
-    <h2>6. Updates to This Policy</h2>
+    <h2>7. Updates to This Policy</h2>
     <p>If we ever make changes to how we handle your data, we’ll let you know here or in the app.</p>
 
-    <h2>7. Get in Touch</h2>
+    <h2>8. Get in Touch</h2>
     <p>Questions, concerns, or feedback? Reach out anytime at: <a href="mailto:shylaxdev@gmail.com">shylaxdev@gmail.com</a></p>
   </div>
 </body>
